cel-rs-macros/tests/ui/undefined_identifier.rs
use cel_rs_macros::expression;

fn main() {
    expression! {
        undefined_var + 10
    };
}
